tests/derive-tests/variant_downcast/fail/union.err.txt
error: expected `enum`
 --> /tests/derive-tests/variant_downcast/fail/union.rs:4:5
  |
4 | pub union Union {
  |     ^^^^^
error: could not compile `<CRATE>` (bin "<BIN>") due to 1 previous error
